# OOP-Project

./: .gitignore  .gitmodules  CMakeLists.txt  eval.py  game.py  gymenv.py  hyperparams.yml  main.py  test.py  train_no_optimize.py
logs/ppo/w-TetrisEnv_1/: 0.monitor.csv
logs/ppo/w-TetrisEnv_1/w-TetrisEnv/: args.yml
logs/ppo/w-TetrisEnv_2/: 0.monitor.csv
logs/ppo/w-TetrisEnv_2/w-TetrisEnv/: args.yml  config.yml
logs/ppo/w-TetrisEnv_3/: 0.monitor.csv  evaluations.npz
logs/ppo/w-TetrisEnv_3/w-TetrisEnv/: args.yml
logs/ppo/w-TetrisEnv_4/: 0.monitor.csv
logs/ppo/w-TetrisEnv_4/w-TetrisEnv/: args.yml
logs/ppo/w-TetrisEnv_5/: 0.monitor.csv  evaluations.npz
logs/ppo/w-TetrisEnv_5/w-TetrisEnv/: args.yml
logs/ppo/w-TetrisEnv_6/: 0.monitor.csv
logs/ppo/w-TetrisEnv_6/w-TetrisEnv/: args.yml
src/: block.cpp  block.hpp  board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  trainHeur.cpp  ui.cpp  ui.hpp
src/ai/: env.cpp  env.hpp  genetic.cpp  genetic.hpp  heuristics.cpp  heuristics.hpp
src/core/: block.cpp  block.hpp  board.cpp  board.hpp  common.hpp  tetris.cpp  tetris.hpp
src/ui/: animation.hpp  cli.cpp  cli.hpp  mainUI.cpp  mainUI.hpp  renderer.cpp  renderer.hpp  tetrisUI.cpp  tetrisUI.hpp  ui.cpp  ui.hpp
tetris_gym/: CMakeLists.txt  pyproject.toml
tetris_gym/src/: block.hpp  board.cpp  board.hpp  game.cpp  game.hpp  minimalGame.cpp  minimalGame.hpp  tetris_gym_ext.cpp
tetris_gym/src/tetris_gym/: __init__.py
tetris_tensorboard/w-TetrisEnv/PPO_1/: events.out.tfevents.1730000558.iamw.7102.0
tetris_tensorboard/w-TetrisEnv/PPO_2/: events.out.tfevents.1730000643.iamw.7344.0
tetris_tensorboard/w-TetrisEnv/PPO_3/: events.out.tfevents.1730007574.iamw.7545.0
tetris_tensorboard/w-TetrisEnv/PPO_4/: events.out.tfevents.1730007686.iamw.7748.0
tetris_tensorboard/w-TetrisEnv/PPO_5/: events.out.tfevents.1730025921.iamw.9477.0
